# lidar_obstacle_detector

./: CMakeLists.txt  package.xml
config/: params.yaml
launch/: mai_city_launch.py
