<?xml version="1.0"?>
<package format="3">
  <name>lidar_obstacle_detector</name>
  <version>0.1.0</version>
  <description>ROS 2 port of a Lidar obstacle detector</description>
  <maintainer email="ss@todo.todo">ss</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Build dependencies -->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>pcl_ros</depend>
  <depend>eigen3_cmake_module</depend>

  <!-- Optional: If you're using dynamic parameters -->
  <depend>rcl_interfaces</depend>

  <!-- Replace with your own message packages if needed -->
  <depend>autoware_auto_msgs</depend>
  <depend>jsk_recognition_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

